Add progress tracking, suggestions, and versioning
Introduces ProgressManager for tracking study progress and saving results to localStorage, with UI enhancements for topic/video progress and completion. Adds a study suggestion system to the dashboard, data export/import features, and a version badge with auto-updating version info via update_version.js and version.json. Updates styles and markup to support new features, and improves deployment workflow to include versioning.

--- a/exam.html
+++ b/exam.html
@@ -180,6 +180,7 @@
         ⌨️ <kbd>1-4</kbd> chọn đáp án | <kbd>Enter</kbd> tiếp tục | <kbd>H</kbd> gợi ý
     </div>
 
+    <script src="js/progress.js"></script>
     <script src="js/common.js"></script>
     <script src="js/exam.js"></script>
 </body>
