--- a/study.html
+++ b/study.html
@@ -165,6 +165,7 @@
         </div>
     </footer>
 
+    <script src="js/progress.js"></script>
     <script src="js/common.js"></script>
     <script src="js/study.js"></script>
 </body>
