--- a/settings.html
+++ b/settings.html
@@ -30,7 +30,7 @@
             <h2 class="md-section-title">Cài đặt & Dữ liệu</h2>
 
             <!-- Subject Selector Section -->
-            <div class="md-card md-card-outlined" style="margin-bottom: 24px; border-color: var(--md-primary);">
+            <div class="md-card md-card-outlined">
                 <div class="md-card-body">
                     <div class="md-data-header">
                         <span class="md-data-icon">📚</span>
@@ -49,7 +49,7 @@
             </div>
 
             <!-- Theme Toggle Section -->
-            <div class="md-card md-card-outlined" style="margin-bottom: 24px;">
+            <div class="md-card md-card-outlined">
                 <div class="md-card-body">
                     <div class="md-data-header" style="margin-bottom: 16px;">
                         <span class="md-data-icon">🎨</span>
@@ -92,7 +92,7 @@
             </div>
 
             <!-- Experimental Features Section -->
-            <div class="md-card md-card-outlined" style="margin-bottom: 24px; border-color: var(--accent);">
+            <div class="md-card md-card-outlined">
                 <div class="md-card-body">
                     <div class="md-data-header" style="margin-bottom: 16px;">
                         <span class="md-data-icon">🧪</span>
@@ -108,7 +108,10 @@
                         <div class="color-option" onclick="selectColorTheme('default')" title="Mặc định (NEO)"
                             style="cursor: pointer; text-align: center;">
                             <div
-                                style="width: 48px; height: 48px; border-radius: 50%; background: linear-gradient(135deg, #7c3aed, #06b6d4); margin-bottom: 8px; border: 2px solid transparent; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+                                style="width: 48px; height: 48px; border-radius: 50%; background: #7c3aed; margin-bottom: 8px; border: 2px solid transparent; position: relative;">
+                                <div
+                                    style="position: absolute; width: 50%; height: 100%; right: 0; top: 0; background: #06b6d4; border-top-right-radius: 48px; border-bottom-right-radius: 48px;">
+                                </div>
                             </div>
                             <span style="font-size: 12px; font-weight: 500;">Mặc định</span>
                         </div>
@@ -117,7 +120,7 @@
                         <div class="color-option" onclick="selectColorTheme('ocean')" title="Đại dương"
                             style="cursor: pointer; text-align: center;">
                             <div
-                                style="width: 48px; height: 48px; border-radius: 50%; background: linear-gradient(135deg, #0ea5e9, #2dd4bf); margin-bottom: 8px; border: 2px solid transparent; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+                                style="width: 48px; height: 48px; border-radius: 50%; background: #0ea5e9; margin-bottom: 8px; border: 2px solid transparent;">
                             </div>
                             <span style="font-size: 12px; font-weight: 500;">Đại dương</span>
                         </div>
@@ -126,7 +129,7 @@
                         <div class="color-option" onclick="selectColorTheme('nature')" title="Thiên nhiên"
                             style="cursor: pointer; text-align: center;">
                             <div
-                                style="width: 48px; height: 48px; border-radius: 50%; background: linear-gradient(135deg, #10b981, #84cc16); margin-bottom: 8px; border: 2px solid transparent; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+                                style="width: 48px; height: 48px; border-radius: 50%; background: #10b981; margin-bottom: 8px; border: 2px solid transparent;">
                             </div>
                             <span style="font-size: 12px; font-weight: 500;">Thiên nhiên</span>
                         </div>
@@ -135,7 +138,7 @@
                         <div class="color-option" onclick="selectColorTheme('sunset')" title="Hoàng hôn"
                             style="cursor: pointer; text-align: center;">
                             <div
-                                style="width: 48px; height: 48px; border-radius: 50%; background: linear-gradient(135deg, #f59e0b, #ef4444); margin-bottom: 8px; border: 2px solid transparent; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+                                style="width: 48px; height: 48px; border-radius: 50%; background: #f59e0b; margin-bottom: 8px; border: 2px solid transparent;">
                             </div>
                             <span style="font-size: 12px; font-weight: 500;">Hoàng hôn</span>
                         </div>
@@ -144,7 +147,7 @@
                         <div class="color-option" onclick="selectColorTheme('berry')" title="Dâu tây"
                             style="cursor: pointer; text-align: center;">
                             <div
-                                style="width: 48px; height: 48px; border-radius: 50%; background: linear-gradient(135deg, #ec4899, #8b5cf6); margin-bottom: 8px; border: 2px solid transparent; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+                                style="width: 48px; height: 48px; border-radius: 50%; background: #ec4899; margin-bottom: 8px; border: 2px solid transparent;">
                             </div>
                             <span style="font-size: 12px; font-weight: 500;">Dâu tây</span>
                         </div>
@@ -157,16 +160,16 @@
                         <div class="color-option" onclick="selectColorTheme('royal')" title="Hoàng gia"
                             style="cursor: pointer; text-align: center;">
                             <div
-                                style="width: 48px; height: 48px; border-radius: 50%; background: linear-gradient(135deg, #4338ca, #eab308); margin-bottom: 8px; border: 2px solid transparent; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+                                style="width: 48px; height: 48px; border-radius: 50%; background: #4338ca; margin-bottom: 8px; border: 2px solid transparent;">
                             </div>
                             <span style="font-size: 12px; font-weight: 500;">Hoàng gia</span>
                         </div>
 
                         <!-- Midnight -->
-                        <div class="color-option" onclick="selectColorTheme('midnight')" title="Đêm tổi"
+                        <div class="color-option" onclick="selectColorTheme('midnight')" title="Đêm tối"
                             style="cursor: pointer; text-align: center;">
                             <div
-                                style="width: 48px; height: 48px; border-radius: 50%; background: linear-gradient(135deg, #0f172a, #3b82f6); margin-bottom: 8px; border: 2px solid transparent; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+                                style="width: 48px; height: 48px; border-radius: 50%; background: #0f172a; margin-bottom: 8px; border: 2px solid transparent; border: 1px solid var(--md-outline);">
                             </div>
                             <span style="font-size: 12px; font-weight: 500;">Đêm tối</span>
                         </div>
@@ -175,7 +178,7 @@
                         <div class="color-option" onclick="selectColorTheme('coffee')" title="Cà phê"
                             style="cursor: pointer; text-align: center;">
                             <div
-                                style="width: 48px; height: 48px; border-radius: 50%; background: linear-gradient(135deg, #78350f, #d97706); margin-bottom: 8px; border: 2px solid transparent; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+                                style="width: 48px; height: 48px; border-radius: 50%; background: #78350f; margin-bottom: 8px; border: 2px solid transparent;">
                             </div>
                             <span style="font-size: 12px; font-weight: 500;">Cà phê</span>
                         </div>
@@ -184,7 +187,7 @@
                         <div class="color-option" onclick="selectColorTheme('crimson')" title="Huyết dụ"
                             style="cursor: pointer; text-align: center;">
                             <div
-                                style="width: 48px; height: 48px; border-radius: 50%; background: linear-gradient(135deg, #9f1239, #f43f5e); margin-bottom: 8px; border: 2px solid transparent; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+                                style="width: 48px; height: 48px; border-radius: 50%; background: #9f1239; margin-bottom: 8px; border: 2px solid transparent;">
                             </div>
                             <span style="font-size: 12px; font-weight: 500;">Huyết dụ</span>
                         </div>
@@ -193,95 +196,94 @@
                         <div class="color-option" onclick="selectColorTheme('teal')" title="Ngọc bích"
                             style="cursor: pointer; text-align: center;">
                             <div
-                                style="width: 48px; height: 48px; border-radius: 50%; background: linear-gradient(135deg, #0d9488, #22d3ee); margin-bottom: 8px; border: 2px solid transparent; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+                                style="width: 48px; height: 48px; border-radius: 50%; background: #0d9488; margin-bottom: 8px; border: 2px solid transparent;">
                             </div>
                             <span style="font-size: 12px; font-weight: 500;">Ngọc bích</span>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="md-card md-card-outlined" style="margin-bottom: 24px;">
-            <div class="md-card-body">
-                <div class="md-data-header">
-                    <span class="md-data-icon">💾</span>
-                    <div class="md-data-text">
-                        <h3>Quản lý dữ liệu</h3>
-                        <p>Dữ liệu học tập được lưu trên trình duyệt của bạn. Hãy sao lưu thường xuyên để tránh mất
-                            dữ liệu.</p>
+            <div class="md-card md-card-outlined">
+                <div class="md-card-body">
+                    <div class="md-data-header">
+                        <span class="md-data-icon">💾</span>
+                        <div class="md-data-text">
+                            <h3>Quản lý dữ liệu</h3>
+                            <p>Dữ liệu học tập được lưu trên trình duyệt của bạn. Hãy sao lưu thường xuyên để tránh mất
+                                dữ liệu.</p>
+                        </div>
+                    </div>
+                    <div class="md-data-actions" style="display: flex; gap: 12px; flex-wrap: wrap;">
+                        <button onclick="exportData()" class="md-btn md-btn-filled">
+                            ⬇️ Sao lưu dữ liệu
+                        </button>
+                        <button onclick="document.getElementById('import-file').click()" class="md-btn md-btn-outlined">
+                            ⬆️ Khôi phục dữ liệu
+                        </button>
+                        <input type="file" id="import-file" style="display: none" onchange="importData(this)">
+                    </div>
+                    <div style="margin-top: 16px; font-size: 13px; color: var(--md-error);">
+                        * Lưu ý: Xóa cache trình duyệt sẽ làm mất dữ liệu nếu chưa sao lưu.
                     </div>
                 </div>
-                <div class="md-data-actions" style="display: flex; gap: 12px; flex-wrap: wrap;">
-                    <button onclick="exportData()" class="md-btn md-btn-filled">
-                        ⬇️ Sao lưu dữ liệu
+            </div>
+
+            <!-- Support Section -->
+            <div class="md-card md-card-outlined">
+                <div class="md-card-body"
+                    style="display: flex; align-items: center; justify-content: space-between; gap: 16px; flex-wrap: wrap;">
+                    <div style="flex: 1; min-width: 200px;">
+                        <h3 class="md-card-title"
+                            style="color: var(--md-primary); display: flex; align-items: center; gap: 8px;">
+                            ☕ Ủng hộ phát triển
+                        </h3>
+                        <p class="md-card-text" style="font-size: 14px; margin-top: 4px;">Dự án phi lợi nhuận. Mọi sự
+                            ủng hộ giúp duy trì server và phát triển tính năng mới.</p>
+                    </div>
+                    <button onclick="openSupportModal()" class="md-btn md-btn-filled"
+                        style="background: var(--md-primary); color: var(--md-on-primary);">
+                        Mời ly cà phê ☕
                     </button>
-                    <button onclick="document.getElementById('import-file').click()" class="md-btn md-btn-outlined">
-                        ⬆️ Khôi phục dữ liệu
-                    </button>
-                    <input type="file" id="import-file" style="display: none" onchange="importData(this)">
-                </div>
-                <div style="margin-top: 16px; font-size: 13px; color: var(--md-error);">
-                    * Lưu ý: Xóa cache trình duyệt sẽ làm mất dữ liệu nếu chưa sao lưu.
                 </div>
             </div>
-        </div>
 
-        <!-- Support Section -->
-        <div class="md-card md-card-outlined" style="margin-bottom: 24px; border-color: var(--md-primary);">
-            <div class="md-card-body"
-                style="display: flex; align-items: center; justify-content: space-between; gap: 16px; flex-wrap: wrap;">
-                <div style="flex: 1; min-width: 200px;">
-                    <h3 class="md-card-title"
-                        style="color: var(--md-primary); display: flex; align-items: center; gap: 8px;">
-                        ☕ Ủng hộ phát triển
-                    </h3>
-                    <p class="md-card-text" style="font-size: 14px; margin-top: 4px;">Dự án phi lợi nhuận. Mọi sự
-                        ủng hộ giúp duy trì server và phát triển tính năng mới.</p>
-                </div>
-                <button onclick="openSupportModal()" class="md-btn md-btn-filled"
-                    style="background: var(--md-primary); color: var(--md-on-primary);">
-                    Mời ly cà phê ☕
-                </button>
-            </div>
-        </div>
+            <!-- App Info / Footer Content Moved Here -->
+            <div class="md-card md-card-filled">
+                <div class="md-card-body">
+                    <h3 class="md-card-title" style="font-size: 18px; margin-bottom: 16px;">Thông tin ứng dụng</h3>
 
-        <!-- App Info / Footer Content Moved Here -->
-        <div class="md-card md-card-filled">
-            <div class="md-card-body">
-                <h3 class="md-card-title" style="font-size: 18px; margin-bottom: 16px;">Thông tin ứng dụng</h3>
+                    <div
+                        style="color: var(--md-on-surface-variant); font-size: 14px; line-height: 1.6; display: flex; flex-direction: column; gap: 12px;">
+                        <p><strong>Ôn Thi Trắc Nghiệm</strong> là dự án mã nguồn mở hỗ trợ sinh viên ôn tập hiệu quả.
+                        </p>
 
-                <div
-                    style="color: var(--md-on-surface-variant); font-size: 14px; line-height: 1.6; display: flex; flex-direction: column; gap: 12px;">
-                    <p><strong>Ôn Thi Trắc Nghiệm</strong> là dự án mã nguồn mở hỗ trợ sinh viên ôn tập hiệu quả.
-                    </p>
+                        <p id="footer-school-info">
+                            Ôn tập miễn phí do sinh viên trường <strong>Đại học Công nghệ Giao thông vận tải</strong>
+                            tạo và
+                            <strong>Học viện Công nghệ Bưu chính Viễn thông</strong> hỗ trợ nội dung ❤️
+                        </p>
 
-                    <p id="footer-school-info">
-                        Ôn tập miễn phí do sinh viên trường <strong>Đại học Công nghệ Giao thông vận tải</strong>
-                        tạo và
-                        <strong>Học viện Công nghệ Bưu chính Viễn thông</strong> hỗ trợ nội dung ❤️
-                    </p>
+                        <div class="footer-disclaimer"
+                            style="font-style: italic; opacity: 0.8; padding: 12px; background: var(--md-surface-container-high); border-radius: 8px;">
+                            Disclaimer: Gemini có thể mắc sai lầm, các câu hỏi, đáp án và nội dung lý thuyết nên dừng
+                            lại ở mức độ tham khảo.
+                        </div>
 
-                    <div class="footer-disclaimer"
-                        style="font-style: italic; opacity: 0.8; padding: 12px; background: var(--md-surface-container-high); border-radius: 8px;">
-                        Disclaimer: Gemini có thể mắc sai lầm, các câu hỏi, đáp án và nội dung lý thuyết nên dừng
-                        lại ở mức độ tham khảo.
-                    </div>
+                        <div style="border-top: 1px solid var(--md-outline-variant); margin: 8px 0;"></div>
 
-                    <div style="border-top: 1px solid var(--md-outline-variant); margin: 8px 0;"></div>
+                        <a href="https://www.facebook.com/HanitaVII" target="_blank" class="text-secondary"
+                            style="text-decoration: none; display: inline-flex; align-items: center; gap: 8px; color: var(--md-primary);">
+                            <span style="font-size: 20px;">👨‍💻</span>
+                            <span>Liên hệ / Góp ý: <strong>HanitaVII</strong></span>
+                        </a>
 
-                    <a href="https://www.facebook.com/HanitaVII" target="_blank" class="text-secondary"
-                        style="text-decoration: none; display: inline-flex; align-items: center; gap: 8px; color: var(--md-primary);">
-                        <span style="font-size: 20px;">👨‍💻</span>
-                        <span>Liên hệ / Góp ý: <strong>HanitaVII</strong></span>
-                    </a>
-
-                    <div class="footer-version" style="font-size: 12px; opacity: 0.6; font-family: monospace;">
-                        <span>v2.0.0</span> •
-                        <span>Updated: 29/12/2025</span>
+                        <div class="footer-version" style="font-size: 12px; opacity: 0.6; font-family: monospace;">
+                            <span>v2.0.0</span> •
+                            <span>Updated: 29/12/2025</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </main>
 
